fix spacing and url

--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -36,6 +36,7 @@
   align-items: center;
   height: 100%;
   align-self: center;
+  margin-bottom: 2rem;
 }
 
 .spinner {
