--- a/src/app/components/idea/idea.component.scss
+++ b/src/app/components/idea/idea.component.scss
@@ -11,4 +11,5 @@
   justify-content: center;
   gap: 0.2rem;
   width: 85%;
+  margin-bottom: 2rem;
 }
